--- a/learning-astro/src/pages/index.astro
+++ b/learning-astro/src/pages/index.astro
@@ -1,15 +1,19 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import First from "../components/First.astro";
+// import First from "../components/First.astro";
+import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
 
-const name: string = "Durwankur";
-const visible: boolean = true;
-const CustomElem = "div";
-const items = ["Dog", "Cat", "Platypus"];
+// const name: string = "Durwankur";
+// const visible: boolean = true;
+// const CustomElem = "div";
+// const items = ["Dog", "Cat", "Platypus"];
 ---
 
+<Navbar />
+
 <Layout title="Welcome to Astro.">
-  <h2 class="red">There There mate</h2>
+  <!-- <h2 class="red">There There mate</h2>
 
   <h5>My name is {name}</h5>
   <h5>I am {32 - 12} years old</h5>
@@ -28,7 +32,20 @@ const items = ["Dog", "Cat", "Platypus"];
     ))
   }
 
-  <First greetings="Howdy" name="Durwankur" />
+  <First greetings="Howdy" name="Durwankur" /> -->
+
+  <main>
+    <h3>Wassup Mate!</h3>
+    <h5>My name's Durwankur Naik</h5>
+
+    <div class="socials">
+      <li><a href="https://www.linkedin.com/in/durwankur-naik-58301b203/?originalSubdomain=in" target="_blank">LinkedIn</a></li>
+      <li><a href="https://twitter.com/NaikDurwankur" target="_blank">Twitter</a></li>
+      <li><a href="https://github.com/durwankurnaik" target="_blank">Github</a></li>
+      <li><a href="https://leetcode.com/sparrxw04/" target="_blank">Leetcode</a></li>
+    </div>
+  </main>
+  <Footer />
 </Layout>
 
 <style>
@@ -36,9 +53,39 @@ const items = ["Dog", "Cat", "Platypus"];
     padding: 0;
     margin: 0;
   }
+</style>
+
+<style>
   body {
     background-color: #5cdb95;
     color: #05386b;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
+    font-weight: 200;
+    font-family: "Lato", sans-serif;
+  }
+  main {
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    flex-direction: column;
+  }
+  .socials {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    font-size: 1.8rem;
+    margin: 2rem 0 1rem 0;
+  }
+  .socials li {
+    list-style: none;
+  }
+  .socials li a {
+    text-decoration: none;
+    color: inherit;
+  }
+  span {
+    font-size: 1.2rem;
   }
 </style>
